{
    "name": "MouseKeyboardControls",
    "maps": [
        {
            "name": "MouseKeyboard",
            "id": "d9453d04-58c6-4519-af70-59b74234023b",
            "actions": [
                {
                    "name": "LMBPress",
                    "type": "PassThrough",
                    "id": "10712a12-8160-4c8a-a13d-470f023353a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LMBRelease",
                    "type": "Button",
                    "id": "18b51f48-4fa2-497a-8c67-0f484bf3480a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1710192d-d0ca-4a93-9156-dc5c66527d3e",
                    "path": "<Mouse>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LMBPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "147a212f-b49d-4463-a6d3-2139f4785f9c",
                    "path": "<Mouse>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LMBRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}